Put the definitions back on top because at the bottom it causes layout issues.

--- a/assets/scss/zerotohero.scss
+++ b/assets/scss/zerotohero.scss
@@ -720,27 +720,6 @@ ul.collapse-10.collapsed li:nth-child(-n + 10) {
   }
 }
 
-.word-block-unknown {
-  display: inline-block;
-  span {
-    display: block;
-  }
-  .word-block-definition-placeholder {
-    line-height: 1;
-    opacity: 0.7;
-    margin: 0 0.1rem 0 0.1rem;
-    font-size: 0.8rem;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    display: none;
-  }
-}
-.show-definition .word-block-unknown .word-block-definition-placeholder {
-  display: block;
-}
-
-
 .text-primary {
   color: $primary-color !important;
 }
